[gd_scene load_steps=42 format=3 uid="uid://bpf5xm5dh514x"]

[ext_resource type="Texture2D" uid="uid://b2la1yge870x2" path="res://assets/lpc_entry/png/walkcycle/BODY_skeleton.png" id="1_dhug1"]
[ext_resource type="Script" path="res://scripts/skeleton.gd" id="1_gm05k"]
[ext_resource type="PackedScene" uid="uid://cdoyhriv36rm3" path="res://Components/health_component.tscn" id="3_1oi6s"]
[ext_resource type="PackedScene" uid="uid://dmlnwioja4n65" path="res://Components/movement_component.tscn" id="4_fj80e"]
[ext_resource type="PackedScene" uid="uid://b7ja4o26feoot" path="res://Components/enemy_direction_finder_component.tscn" id="5_sdtjf"]
[ext_resource type="PackedScene" uid="uid://cw5mav0m0jou3" path="res://Components/animator_component.tscn" id="6_55w2b"]
[ext_resource type="PackedScene" uid="uid://xsf1oxypnpyk" path="res://Components/hurtbox_component.tscn" id="7_dtlvy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wp1ua"]
atlas = ExtResource("1_dhug1")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vh3b"]
atlas = ExtResource("1_dhug1")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_squxn"]
atlas = ExtResource("1_dhug1")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwxah"]
atlas = ExtResource("1_dhug1")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4kw5"]
atlas = ExtResource("1_dhug1")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_drv8a"]
atlas = ExtResource("1_dhug1")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yrcd"]
atlas = ExtResource("1_dhug1")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gojq3"]
atlas = ExtResource("1_dhug1")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqbpd"]
atlas = ExtResource("1_dhug1")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxdfj"]
atlas = ExtResource("1_dhug1")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vparr"]
atlas = ExtResource("1_dhug1")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3phoj"]
atlas = ExtResource("1_dhug1")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tfen"]
atlas = ExtResource("1_dhug1")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbqba"]
atlas = ExtResource("1_dhug1")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3muqi"]
atlas = ExtResource("1_dhug1")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_83p3c"]
atlas = ExtResource("1_dhug1")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oo2di"]
atlas = ExtResource("1_dhug1")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_21mqo"]
atlas = ExtResource("1_dhug1")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bp3xm"]
atlas = ExtResource("1_dhug1")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptny3"]
atlas = ExtResource("1_dhug1")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtalp"]
atlas = ExtResource("1_dhug1")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxibs"]
atlas = ExtResource("1_dhug1")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iubsb"]
atlas = ExtResource("1_dhug1")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmoxj"]
atlas = ExtResource("1_dhug1")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lj2qf"]
atlas = ExtResource("1_dhug1")
region = Rect2(512, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfjnx"]
atlas = ExtResource("1_dhug1")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q886q"]
atlas = ExtResource("1_dhug1")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ekcf"]
atlas = ExtResource("1_dhug1")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4oee"]
atlas = ExtResource("1_dhug1")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ym537"]
atlas = ExtResource("1_dhug1")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e11h3"]
atlas = ExtResource("1_dhug1")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_45gsh"]
atlas = ExtResource("1_dhug1")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuxsj"]
atlas = ExtResource("1_dhug1")
region = Rect2(512, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_pkba8"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wp1ua")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vh3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_squxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwxah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4kw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drv8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yrcd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gojq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqbpd")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxdfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vparr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3phoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tfen")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbqba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3muqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83p3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oo2di")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_21mqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bp3xm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptny3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtalp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxibs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iubsb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmoxj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lj2qf")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfjnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q886q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ekcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4oee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ym537")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e11h3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45gsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuxsj")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[node name="Skeleton" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_gm05k")
max_health = 3

[node name="EnemyAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pkba8")
animation = &"walk_up"
frame_progress = 0.810187

[node name="EnemyCollisionBox" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(16, 16, 16, 16, 16, 32, -16, 32, -16, -16, -16, -24, 16, -24)

[node name="HealthComponent" parent="." instance=ExtResource("3_1oi6s")]

[node name="MovementComponent" parent="." node_paths=PackedStringArray("direction_component", "knock_timer") instance=ExtResource("4_fj80e")]
direction_component = NodePath("../EnemyDirectionFinderComponent")
knock_timer = NodePath("../KnockTimer")
speed = 80

[node name="EnemyDirectionFinderComponent" parent="." instance=ExtResource("5_sdtjf")]

[node name="AnimatorComponent" parent="." node_paths=PackedStringArray("direction_component") instance=ExtResource("6_55w2b")]
direction_component = NodePath("../EnemyDirectionFinderComponent")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("collision_area", "health_component") instance=ExtResource("7_dtlvy")]
collision_area = NodePath("../EnemyCollisionBox")
health_component = NodePath("../HealthComponent")

[node name="KnockTimer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="is_dead" from="HealthComponent" to="." method="_on_health_component_is_dead"]
[connection signal="change_health" from="HurtboxComponent" to="HealthComponent" method="_on_hurtbox_component_change_health"]
[connection signal="knock_back" from="HurtboxComponent" to="MovementComponent" method="_on_hurtbox_component_knock_back"]
[connection signal="timeout" from="KnockTimer" to="MovementComponent" method="_on_knock_timer_timeout"]
